--- a/Presidencia/MasterPrincipal.Master
+++ b/Presidencia/MasterPrincipal.Master
@@ -45,6 +45,12 @@
                     <li>
                         <a href="Ejemplo.aspx"><span class="fa fa-connectdevelop mr-3"></span>Formulario Ejemplo</a>
                     </li>
+                    <li>
+                        <a href="ReporteAudiencias.aspx"><span class="fa fa-connectdevelop mr-3"></span>Reporte Audiencias</a>
+                    </li>
+                    <li>
+                        <a href="ReporteReservas.aspx"><span class="fa fa-connectdevelop mr-3"></span>Reporte Reservas</a>
+                    </li>
 
                 </ul>
 
