Exportación de ReportesConsultaFoto

--- a/Presidencia/StyleLogin/css/main.css
+++ b/Presidencia/StyleLogin/css/main.css
@@ -300,14 +300,16 @@ iframe {
 /*------------------------------------------------------------------
 [ Button ]*/
 .container-login100-form-btn {
-  width: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+	width: 100%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	background: #6F7A21; /* #2f89fc; */
+	border-color: #6F7A21; /*#2f89fc;*/
 }
 
 .login100-form-btn {
