--- a/Presidencia/css/style.css
+++ b/Presidencia/css/style.css
@@ -8141,10 +8141,11 @@ body {
   color: gray; }
 
 a {
-  -webkit-transition: .3s all ease;
-  -o-transition: .3s all ease;
-  transition: .3s all ease;
-  color: #2f89fc; }
+    -webkit-transition: .3s all ease;
+    -o-transition: .3s all ease;
+    transition: .3s all ease;
+    color: #333301; /*#2f89fc;*/
+}
   a:hover, a:focus {
     text-decoration: none !important;
     outline: none !important;
@@ -8192,14 +8193,15 @@ h1, h2, h3, h4, h5,
   width: 100%; }
 
 #sidebar {
-  min-width: 250px;
-  max-width: 250px;
-  background: #212121;
-  color: #fff;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-  position: relative; }
+    min-width: 250px;
+    max-width: 250px;
+    background: #646567; /* #212121; */
+    color: #fff;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    position: relative;
+}
   #sidebar .h6 {
     color: #fff; }
   #sidebar.active {
@@ -8211,10 +8213,11 @@ h1, h2, h3, h4, h5,
     font-weight: 700;
     font-size: 20px; }
     #sidebar h1 .logo {
-      color: #fff;
-      display: block;
-      padding: 10px 30px;
-      background: #2f89fc; }
+        color: #fff;
+        display: block;
+        padding: 10px 30px;
+        background: #6F7A21 /* #2f89fc; */
+    }
   #sidebar ul.components {
     padding: 0; }
   #sidebar ul li {
@@ -8228,16 +8231,18 @@ h1, h2, h3, h4, h5,
       display: block;
       color: rgba(255, 255, 255, 0.6);
       border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-      #sidebar ul li a:hover {
-        color: #fff;
-        background: #2f89fc;
-        border-bottom: 1px solid #2f89fc; }
+        #sidebar ul li a:hover {
+            color: #fff;
+            background: #6F7A21; /*#2f89fc;*/
+            border-bottom: 1px solid #6F7A21; /*#2f89fc;*/
+        }
     #sidebar ul li.active > a {
       background: transparent;
       color: #fff; }
-      #sidebar ul li.active > a:hover {
-        background: #2f89fc;
-        border-bottom: 1px solid #2f89fc; }
+        #sidebar ul li.active > a:hover {
+            background: #6F7A21; /* #2f89fc; */
+            border-bottom: 1px solid #6F7A21; /* #2f89fc; */
+        }
   @media (max-width: 991.98px) {
     #sidebar {
       margin-left: -250px; }
@@ -8295,11 +8300,13 @@ a[data-toggle="collapse"] {
   transition: all 0.3s; }
 
 .btn.btn-primary {
-  background: #2f89fc;
-  border-color: #2f89fc; }
-  .btn.btn-primary:hover, .btn.btn-primary:focus {
-    background: #2f89fc !important;
-    border-color: #2f89fc !important; }
+    background: #6F7A21; /* #2f89fc; */
+    border-color:  #6F7A21; /*#2f89fc;*/
+}
+    .btn.btn-primary:hover, .btn.btn-primary:focus {
+        background: #646567; /* #2f89fc; */         !important;
+        border-color: #646567; /* #2f89fc; */         !important;
+    }
 
 .footer p {
   color: rgba(255, 255, 255, 0.5); }
@@ -8317,7 +8324,8 @@ a[data-toggle="collapse"] {
     border-color: #000; }
   .form-control::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
-    color: rgba(255, 255, 255, 0.5); }
+    color: rgba(255, 255, 255, 0.5);
+}
   .form-control::-moz-placeholder {
     /* Firefox 19+ */
     color: rgba(255, 255, 255, 0.5); }
