--- a/Presidencia/MasterPrincipal.Master
+++ b/Presidencia/MasterPrincipal.Master
@@ -17,15 +17,14 @@
     <link href="lib/main.css" rel="stylesheet" />
     <script src="lib/main.js"></script>
     <script src="lib/locales/es.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
-    <%--<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>--%>  
+    <%--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>--%> 
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>  
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
 
 </head>
 <body>
     <form runat="server">
-
         <div class="wrapper d-flex align-items-stretch">
             <nav id="sidebar">
                 <div class="custom-menu">
@@ -33,27 +32,34 @@
                         <i class="fa fa-bars"></i>
                         <span class="sr-only">Toggle Menu</span>
                     </button>
-                </div>
+                </div>   
                 <h1><a href="Inicio.aspx" class="logo">Presidencia TSJH</a></h1>
+
+
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="#"><span class="fa fa-user mr-3"></span>Agenda Presidencia</a>
                     </li>
                     <li>
-                        <a href="ReservaAuditorio.aspx"><span class="fa fa-user mr-3"></span>Reserva de Auditorio </a>
+                        <a href="ReservaAuditorio.aspx"><span class="fa fa-calendar-check-o mr-3"></span>Reserva de Auditorio </a>
                     </li>
                     <li>
-                        <a href="Ejemplo.aspx"><span class="fa fa-connectdevelop mr-3"></span>Formulario Ejemplo</a>
+                        <a href="ReservaPresidencia.aspx"><span class="fa fa-calendar-plus-o mr-3"></span>Agenda Presidencia</a>
                     </li>
-
+                      <li> 
+                    <asp:LinkButton runat="server" ID="lbCerrarSesion" class="mt-lg-5"  OnClick="lbCerrarSesion_Click"> 
+                    <i class="fa fa-close mr-3" aria-hidden="true"></i> Cerrar Sesión
+                        </asp:LinkButton>
+<%--                        <a class="mt-lg-5" href="ReservaPresidencia.aspx"><span class="fa fa-close mr-3"></span>Cerrar Sesión</a>--%>
+                    </li>
                 </ul>
 
+
             </nav>
-
-
-
             <!-- Page Content  -->
+
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+
             </asp:ContentPlaceHolder>
 
         </div>
